small body text was too small on mobile. Fixed.

--- a/src/assets/toolkit/styles/partials/_typography.scss
+++ b/src/assets/toolkit/styles/partials/_typography.scss
@@ -83,7 +83,8 @@ blockquote {
 	font-size: 1.4rem;
 }
 .text-body-small {
-	font-size: 0.9rem;
+	@include breakpoint(mintablet) {
+		font-size: 0.9rem;
 }
 .text-subtle {
 	color: $hardgrey;
